--- a/src/app/components/altas/reembolso/reembolso.component.html
+++ b/src/app/components/altas/reembolso/reembolso.component.html
@@ -21,7 +21,7 @@
                 <div class="col-md-3 mt-3">
                     <label class="control-label mr-2" for="estatus">Estatus:</label><br>
                     <select id="estatus" formControlName="estatus">
-                        <option disabled value='Solicitar'>Solicitar</option>
+                        <option *ngIf="!id_reembolso" disabled value='Solicitar'>Solicitar</option>
                         <option *ngIf="updateR"  disabled [value]="updateR?.estatus" >{{updateR?.estatus}}</option>
                         <option *ngIf="aprobador" value='Aprobado'>Aprobado</option>
                         <option *ngIf="!aprobador" value="Pagado">Pagado</option>
