--- a/src/app/components/altas/registro-oficina/registro-oficina.component.html
+++ b/src/app/components/altas/registro-oficina/registro-oficina.component.html
@@ -57,7 +57,7 @@
                         <div class="mt-3 col-md-3">
                             <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt"></i></span> </label>
                             <p #error id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
-                            <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" min="{{partidaActual['fecha']}}">
+                            <input class="form-control" id="fecha" placeholder="Fecha" formControlName="fecha" type="date" min="{{partidaActual?.fecha}}">
                         </div>
                     </div>
                 </div>
