--- a/src/app/components/registros/proyecto-info/proyecto-info.component.html
+++ b/src/app/components/registros/proyecto-info/proyecto-info.component.html
@@ -144,7 +144,7 @@
                                 <td>{{el.nombre}}</td>
                                 <td>{{el.fechaini}}</td>
                                 <td>{{el.fechafin}}</td>
-                                <td style="text-align: right; ">{{el.salarioReal | currency }}</td>
+                                <td style="text-align: right; ">{{el.costoProyecto | currency }}</td>
                                 <td>
                                     <button type="button" class="btn btn-outline-success mr-2 btn-sm " (click)="actualizar(i) "><i class="fas fa-edit "></i> Modificar</button>
                                 </td>
