--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -45,7 +45,7 @@
             <img id="usuario" src="{{imagen}}">
         </div>
         <div>
-            <input id="usuario" value="{{user}}">
+            <input disabled id="usuario" value="{{user}}">
         </div>
     </div>
 
