--- a/src/app/components/altas/clientes/clientes.component.html
+++ b/src/app/components/altas/clientes/clientes.component.html
@@ -3,7 +3,7 @@
 <div class="loading" *ngIf="loading">Loading&#8230;</div>
 <div class="m-3 card">
     <div class="around">
-        <div class=" mt-3 ml-5 class">
+        <div *ngIf="!id_cte" class=" mt-3 ml-5 class">
             <label class="control-label">Tipo de cliente: </label><br>
             <label class="switch">
                 <input type="checkbox" name="check" id="check" value="true" checked onchange="javascript:showContent()" >
