--- a/src/app/components/altas/gastos-generales/gastos-generales.component.html
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.html
@@ -7,7 +7,7 @@
             <div class="mt-3 col-md-3">
                 <label class="control-label" for="proyecto">Proyecto:</label><br>
                 <select id="proyecto" class="form-control" formControlName="proyecto" (change)="valor(gastosForm.value.proyecto)">
-                    <option disabled value=''>Proyecto</option>
+                    <option disabled value='Proyecto'>Proyecto</option>
                     <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
                   </select>
                 <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
@@ -38,7 +38,7 @@
             <div class="mt-3 col-md-3">
                 <label class="control-label mr-2" for="tipo_gasto">Tipo gasto:</label><br>
                 <select id="tipo_gasto" class="selector" formControlName="tipo_gasto">
-                <option disabled value=''>Tipo gasto</option>
+                <option disabled value='Tipo gasto'>Tipo gasto</option>
                 <option *ngFor="let gto of tipoGto " >{{gto.gasto}}</option>
               </select>
                 <p id="error" *ngIf="submitted && fval.tipo_gasto.invalid">*Este campo no puede ir vacío</p>
