--- a/src/app/components/altas/proyectos/proyectos.component.html
+++ b/src/app/components/altas/proyectos/proyectos.component.html
@@ -43,7 +43,7 @@
             <div class="col-md-4 mt-3">
                 <label class="control-label" for="resp_asg">Responsable ASG: </label><br>
                 <select id="resp_asg" formControlName="resp_asg">
-                    <option disabled value=''>ASG</option>
+                    <option disabled value='ASG'>ASG</option>
                     <option *ngFor="let resp of usuarios">{{resp.nombre}}</option>
                 </select>
                 <p #error id="error" *ngIf="submitted && fval.estatus.invalid" class="mt-2">*Este campo no puede ir vacío</p>
@@ -58,22 +58,22 @@
                 <div class="between">
                     <div class="divcte ">
                         <select *ngIf="checked" id="empresa" formControlName="empresa" (click)="empresaSelected($event.target)" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
-                                <option disabled value=''>Empresa</option>
+                                <option disabled value='Empresa'>Empresa</option>
                                 <option *ngFor="let cte of empresas" >{{cte.empresa}}</option>
                             </select>
                         <select *ngIf="!checked" id="empresa" formControlName="empresa" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
-                                <option disabled value=''>Empresa</option>
+                                <option disabled value='Empresa'>Empresa</option>
                                 <option  value='ASG'>ASG</option>
                             </select>
                     </div>
                     <br>
                     <div class="divcte">
                         <select *ngIf="checked" formControlName="resp_cte" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
-                            <option disabled value=''>Responsable</option>
+                            <option disabled value='Responsable'>Responsable</option>
                             <option *ngFor="let cte of clientes" >{{cte.nombre}}</option>
                         </select>
                         <select *ngIf="!checked" formControlName="resp_cte" data-toggle="tooltip" data-placement="top" title="*Campo obligatorio">
-                            <option disabled value=''>Responsable</option>
+                            <option disabled value='Responsable'>Responsable</option>
                             <option *ngFor="let area of areas">{{area.nombre_area}}</option>
                         </select>
                     </div>
@@ -86,7 +86,7 @@
             <div class="col-md-4 mt-3">
                 <label class="control-label" for="estatus">Estatus:</label> <br>
                 <select id="estatus" class="seleccionador" formControlName="estatus">
-                                <option disabled value=''>Estatus</option>
+                                <option disabled value='Estatus'>Estatus</option>
                                 <option value="activo">Activo</option>
                                 <option value="cancelado">Cancelado</option>
                                 <option value="pagado">Finalizado</option>
