--- a/src/app/components/altas/usuarios/usuarios.component.css
+++ b/src/app/components/altas/usuarios/usuarios.component.css
@@ -11,6 +11,6 @@ div#imagen {
     background-size: contain;
     width: 50px;
     height: 50px;
-    border: 1px, solid;
-    border-color: black;
+    border: 1px, transparent;
+    border-color: transparent;
 }
