--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ th {
 
 td {
     text-align: center;
-    border-TOP: transparent;
+    border-top: transparent;
     border: .5px solid #dedee2;
 }
 
@@ -50,6 +50,11 @@ input#vacio {
 
 input:disabled,
 select:disabled {
+    background-color: #ebebee !important;
+}
+
+input#username,
+input#pass {
     background-color: #ebebee !important;
 }
 
@@ -420,7 +425,7 @@ div#filesButton {
     background-size: contain;
     width: 100%;
     height: 150px;
-    border: 1px, solid black;
+    border: 1px, solid transparent;
 }
 
 
