--- a/src/app/components/altas/reembolso/reembolso.component.html
+++ b/src/app/components/altas/reembolso/reembolso.component.html
@@ -1,29 +1,30 @@
 <navbar></navbar>
 <div class="column">
     <h1 class="center">{{ titulo }}</h1>
-    <div class="m-3 card ">
+    <div class="m-3 card">
         <div class="loading" *ngIf="loading">Loading&#8230;</div>
         <form class="m-3" [formGroup]="reembolsoForm" (ngSubmit)="onSubmit()">
             <div class="around">
                 <div class="mt-3 col-md-3">
-                    <label class="control-label mr-2 " for="proyecto">Proyecto:</label><br>
+                    <label class="control-label mr-2" for="proyecto">Proyecto:</label><br>
                     <select id="proyecto" formControlName="proyecto" (change)="valor(reembolsoForm.value.proyecto)">
-                        <option disabled value=''>Proyecto</option>
+                        <option disabled value='Proyecto'>Proyecto</option>
                         <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
                       </select>
                     <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
                 </div>
                 <div class="mt-3 col-md-3">
-                    <label class="control-label " for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                    <input *ngIf="proyecto || id_reembolso" class="form-control-sm" id="fecha" min="proyecto.fechaini" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
+                    <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt"></i></span> </label>
+                    <input *ngIf="proyecto || id_reembolso" class="form-control-sm" id="fecha" min="{{proyecto?.fechaini}}" placeholder="Fecha" formControlName="fecha" type="date" data-toggle="tooltip" title="*Campo obligatorio">
                     <p id="error" *ngIf="submitted && fval.fecha.invalid">*Este campo no puede ir vacío</p>
                 </div>
                 <div class="col-md-3 mt-3">
                     <label class="control-label mr-2" for="estatus">Estatus:</label><br>
                     <select id="estatus" formControlName="estatus">
-                        <option *ngIf="id_reembolso" disabled value='Solicitar'>Solicitar</option>
+                        <option *ngIf="!id_reembolso" disabled value='Solicitar'>Solicitar</option>
                         <option *ngIf="updateR"  disabled [value]="updateR?.estatus" >{{updateR?.estatus}}</option>
                         <option *ngIf="aprobador" value='Aprobado'>Aprobado</option>
+                        <option *ngIf="aprobador" value='Rechazado'>Rechazado</option>
                         <option *ngIf="!aprobador" value="Pagado">Pagado</option>
                         </select>
                 </div>
@@ -31,17 +32,27 @@
             <br>
             <div class="around">
                 <div class="mt-3 class">
-                    <label class="control-label " for="monto ">Monto: </label><br>
-                    <input class="form-control-sm " id="monto " placeholder="Monto " formControlName="cantidad" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkNumeros($event) " [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors } ">
+                    <label class="control-label" for="monto">Monto: </label><br>
+                    <input class="form-control-sm" id="monto" placeholder="Monto" formControlName="cantidad" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkNumeros($event)" [ngClass]="{ 'is-invalid': submitted && fval.cantidad.errors }">
                 </div>
             </div>
             <br>
             <div class="around">
-                <div class="mt-3 class ">
-                    <label class="control-label " for="motivo ">Motivo: </label><br>
-                    <input class="form-control-sm " id="motivo " placeholder="Motivo " formControlName="motivo" type="text " data-toggle="tooltip " title="*Campo obligatorio " (keyup)="checkL_N($event) " [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors } ">
+                <div class="mt-3 class">
+                    <label class="control-label" for="motivo">Motivo: </label><br>
+                    <input class="form-control-sm" id="motivo" placeholder="Motivo" formControlName="motivo" type="text" data-toggle="tooltip" title="*Campo obligatorio" (keyup)="checkL_N($event)" [ngClass]="{ 'is-invalid': submitted && fval.motivo.errors }">
                 </div>
             </div> <br>
+            <div *ngIf="id_reembolso" class="around">
+                <div class="mt-3 class">
+                    <label *ngIf="id_reembolso && (!sameU|| updateR?.observacionesaprobador !== undefined || updateR?.observacionespagado !== undefined )" class="control-label" for="observaciones">Observaciones: </label><br>
+                    <input *ngIf=" aprobador || (!aprobador && updateR?.observacionesaprobador !== undefined)" class="form-control-sm" id="observacionesaprobador" placeholder="Observaciones" formControlName="observacionesaprobador" type="text" data-toggle="tooltip" title="*Campo obligatorio"
+                        (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.observacionesaprobador.errors }"><br><br>
+                    <input *ngIf="(tesorero || financiero) || (updateR?.observacionespagado !== undefined && sameU)" class="form-control-sm" id="observacionespagado" placeholder="Observaciones" formControlName="observacionespagado" type="text" data-toggle="tooltip" title="*Campo obligatorio"
+                        (keyup)="checkLetras($event)" [ngClass]="{ 'is-invalid': submitted && fval.observacionespagado.errors }">
+                </div>
+            </div>
+            <br>
             <label class="class ml-5" *ngIf="!id_reembolso">Subir comprobantes: </label><br>
             <div *ngIf="!id_reembolso" class="around">
                 <div *ngIf="(archivos.length <=  2)" class="drop-img mt-3 col-md-4">
@@ -79,9 +90,9 @@
             </div>
             <br>
             <div *ngIf="actualizar" class="center mt-3">
-                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i class="mr-3 fas fa-times"></i>
-                    Cancelar</button>
-                <button type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
+                <button type="button" id="cancelar" class="btn btn-outline-danger mr-4" (click)="regresar()"><i *ngIf=" botonCancelar === 'Cancelar'" class="mr-3 fas fa-times"></i><i *ngIf=" botonCancelar !== 'Cancelar'"  class=" mr-3 fa fa-arrow-left" aria-hidden="true"></i>
+                    {{botonCancelar}} </button>
+                <button *ngIf=" botonCancelar === 'Cancelar'" type="submit" id="eliminar" class="btn btn-outline-warning"><i class="mr-3 fas fa-sync-alt"></i>
                         Actualizar</button>
             </div>
             <div class="center mt-3">
