--- a/src/app/components/registros/inv-reembolso/inv-reembolso.component.html
+++ b/src/app/components/registros/inv-reembolso/inv-reembolso.component.html
@@ -10,7 +10,7 @@
                 <th>Monto</th>
                 <th>Motivo</th>
                 <th>Estatus</th>
-                <th *ngIf="(usuarioActual?.rol === 'Financiero') || (usuarioActual?.rol === 'Tesorero')">Aprobo</th>
+                <th *ngIf="usuarioActual?.rol !== 'Usuario'">Aprobo</th>
                 <th>Comprobantes</th>
                 <th>Modificar</th>
             </tr>
@@ -22,7 +22,7 @@
                 <td style="text-align: right;">{{el.cantidad | currency }}</td>
                 <td>{{el.motivo}}</td>
                 <td>{{el.estatus}}</td>
-                <td *ngIf="(usuarioActual?.rol === 'Financiero')|| (usuarioActual?.rol === 'Tesorero')">{{el.aprobo}}</td>
+                <td *ngIf="usuarioActual?.rol !== 'Usuario'">{{el.aprobo}}</td>
                 <td>
                     <button class="btn btn-outline-info btn-sm" data-toggle="modal" [attr.data-target]="'#'+el.id_reembolso"> Ver comprobantes ...
                     <div [attr.id]="el.id_reembolso " class="modal fade ">
