--- a/src/app/components/altas/gastos-generales/gastos-generales.component.html
+++ b/src/app/components/altas/gastos-generales/gastos-generales.component.html
@@ -4,15 +4,6 @@
     <div class="loading" *ngIf="loading">Loading&#8230;</div>
     <form class="m-3" [formGroup]="gastosForm" (ngSubmit)="onSubmit()">
         <div class="around">
-            <div class="mt-3 col-md-3">
-                <label class="control-label" for="proyecto">Proyecto:</label><br>
-                <select id="proyecto" class="form-control" formControlName="proyecto" (change)="valor(gastosForm.value.proyecto)">
-                    <option disabled value='Proyecto'>Proyecto</option>
-                    <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
-                  </select>
-                <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
-            </div>
-            <br>
             <div *ngIf="tesorero" class="mt-3 col-md-3">
                 <label class="control-label" for="jefe">Solicitante:</label><br>
                 <select id="jefe" formControlName="solicitante" class="form-control">
@@ -22,8 +13,18 @@
             </div>
             <br>
             <div class="mt-3 col-md-3">
+                <label class="control-label" for="proyecto">Proyecto:</label><br>
+                <select id="proyecto" class="form-control" formControlName="proyecto" (change)="valor(gastosForm.value.proyecto)">
+                    <option disabled value='Proyecto'>Proyecto</option>
+                    <option *ngFor="let proyecto of proyectos" >{{proyecto.nombre}} </option>
+                  </select>
+                <p id="error" *ngIf="submitted && fval.proyecto.invalid">*Este campo no puede ir vacío</p>
+            </div>
+            <br>
+
+            <div class="mt-3 col-md-3">
                 <label class="control-label" for="fecha">Fecha: <span><i class="far fa-calendar-alt "></i></span> </label>
-                <input class="form-control" id="fecha" min="proyecto.fechaini" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
+                <input *ngIf="proyecto" class="form-control" id="fecha" min="{{proyecto.fechaini}}" formControlName="fecha" type="date" data-toggle="tooltip " title="*Campo obligatorio ">
                 <p #error id="error" *ngIf="submitted && fval.fecha.invalid" class="mt-2">*Este campo no puede ir vacío</p>
             </div>
             <br>
